language-server/src/tests/snapshots/gleam_language_server__tests__action__collapse_nested_case_combines_list_with_tail.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(elems: List(List(Int))) {\n  case elems {\n    [] -> 0\n    [_, ..tail] ->\n      case tail {\n        [] -> -1\n        [[1]] -> 1\n        [_, [3, 4]] -> 3\n        [_, _, [5, 6, 7], _] -> 5\n        tail_list -> {\n            echo tail_list\n            -1\n        }\n      }\n    _ -> -1\n  }\n}"
---
----- BEFORE ACTION
pub fn main(elems: List(List(Int))) {
  case elems {
    [] -> 0
    [_, ..tail] ->
          ↑       
      case tail {
        [] -> -1
        [[1]] -> 1
        [_, [3, 4]] -> 3
        [_, _, [5, 6, 7], _] -> 5
        tail_list -> {
            echo tail_list
            -1
        }
      }
    _ -> -1
  }
}


----- AFTER ACTION
pub fn main(elems: List(List(Int))) {
  case elems {
    [] -> 0
    [_, ] -> -1
    [_, [1]] -> 1
    [_, _, [3, 4]] -> 3
    [_, _, _, [5, 6, 7], _] -> 5
    [_, ..tail_list] -> {
            echo tail_list
            -1
        }
    _ -> -1
  }
}
