language-server/src/tests/snapshots/gleam_language_server__tests__action__collapse_nested_case_combines_list_with_unformatted_tail.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(elems: List(String)) {\n  case elems {\n    [first, .. rest_of_list] ->\n      case rest_of_list {\n        [] -> 0\n        [\"first\"] -> 1\n        [_, \"second\"] -> 2\n        [_, \"second\", \"third\", _] -> 4\n        _ -> -1\n      }\n    _ -> -1\n  }\n}"
---
----- BEFORE ACTION
pub fn main(elems: List(String)) {
  case elems {
    [first, .. rest_of_list] ->
               ↑               
      case rest_of_list {
        [] -> 0
        ["first"] -> 1
        [_, "second"] -> 2
        [_, "second", "third", _] -> 4
        _ -> -1
      }
    _ -> -1
  }
}


----- AFTER ACTION
pub fn main(elems: List(String)) {
  case elems {
    [first, ] -> 0
    [first, "first"] -> 1
    [first, _, "second"] -> 2
    [first, _, "second", "third", _] -> 4
    [first, _] -> -1
    _ -> -1
  }
}
