language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_assert_result_to_case.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let assert Ok(value) = Ok(1)\n}"
---
----- BEFORE ACTION
pub fn main() {
  let assert Ok(value) = Ok(1)
      ▔▔▔▔↑                   
}


----- AFTER ACTION
pub fn main() {
  let value = case Ok(1) {
    Ok(value) -> value
    _ -> panic
  }
}
