language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_from_use_expression_with_empty_parens.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  use <- wibble()\n  todo\n  todo\n}\n\nfn wibble(f) {\n    f()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  use <- wibble()
  ↑              
  todo
  todo
}

fn wibble(f) {
    f()
}


----- AFTER ACTION

pub fn main() {
  wibble(fn() {
    todo
    todo
  })
}

fn wibble(f) {
    f()
}
